fix - wrapper:     overflow-x: hidden;

--- a/web-default/scss/theme.scss
+++ b/web-default/scss/theme.scss
@@ -149,6 +149,10 @@ iframe {
 	border: 0;
 }
 
+.wrapper {
+	overflow-x: hidden;
+}
+
 .playball {
 	font-family: $font_2, $font_3;
 }
